# Slot_Machine

./: CMakeLists.txt  Coin.cpp  Coin.h  SlotMachine.cpp  SlotMachine.h  Symbol.cpp  Symbol.h  Wheel.cpp  Wheel.h  main.cpp
